Release Note

* 8/12/2014
  * fixed file rescue for orphaned merging
  * added lock against multiple processing

* 8/11/2014
  * fixed AtlasAnalJB for remote access sites

* 8/6/2014
  * fixed JG for ES jobs to have temporary log file names

* 8/5/2014
  * added campaign info
  * skipping some checks in AtlasProdJobBrokerage when site is preassigned

* 8/1/2014
  * introduced waitInput for Event Picking
  * fixed scouts to take nEventsPerJob into account

* 7/30/2014
  * added a protection against multiple registration of the same task

* 7/29/2014
  * modified scout data calculation to take coreCount into account

* 7/25/2014
  * added more patterns for hospital queues

* 7/24/2014
  * setting superStatus

* 7/23/2014
  * added retryChildTasks_JEDI
  * added stateChangeTime
  * setting maxAttempt for secondary files as well

* 7/22/2014
  * removed US constraint from network-aware brokerage

* 7/19/2014
  * added a protection to CF to set ready to task when only secondary is checked
  * fixed maxDiskCout

* 7/10/2014
  * fixed retryTask
  * changed status=timeout to aborted
  * fixed calculation for effective walltime
  * removed <> from http logging messages
  * added refresh() to *Base
  * added http logging
  * changed to propagate aborting to DEFT
  * added caching for SiteMapper

* 7/8/2014
  * changed PP to kill child tasks when parent is aborted/failed/broken

* 7/7/2014
  * changed CF to remove lost files

* 7/3/2014
  * added consistency check for input datasets

* 7/2/2014
  * implemented to process dependent tasks before parent is completed

* 6/30/2014
  * added vo info to FQAN list when submtting jobs
  * using basename as LFN for useListPFN
  * added ticketID and ticketSystemType
  * fixed Booster in AtlasProdWatchDog

* 6/27/2014
  * fixed TaskRefiner to properly tasks when parent task failed to complete

* 6/26/2014
  * changed AtlasProdJobBroker to work with old fairsharepolicy format

* 6/25/2014
  * added support for multiple consumers
